--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,3 +1,21 @@
+- Run web servlet in JVM sandbox to ensure bugs in application-level
+  authentication do not arbitrary actions on web server 
+
+- Allow 'pushing' heads and data to remote repos
+  - Multiplexed HTTP over SSH?  SPDY over SSH?
+    - Treat the same as /raw requests to the servlet
+    - Add 'userGroups' request metadata containing set of authorizations
+      'anonymous','local-user',etc - could define customer users/groups in the future
+    - Add 'permissions' request metadata containing set of actions
+      user is allowed to do.
+      'write-files', 'read-files', 'add-blobs', 'read-blobs', 'add-heads', etc
+      - This header is determined based on settings and userGroups
+    - File modification requests (usu. POST/PUT)
+      forbidden except for 'local-user' by default.
+      Controlled requests (i.e., issued by a subsystem) may add additional permissions
+
+- Handle x-rdfified URIs, since that could be useful.
+
 - Data format overhaul
   - Should still support old formats!
     - options to force writing in old or new format
