--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,6 +1,5 @@
 - 'ccouch store' shows all mappings (directory entries), even without -v
 - 'ccouch store' should accept '-sector' as alias for '-store-sector'
-- 'ccouch checkout' with '-cache-sector' doesn't seem to work
 
 - Run web servlet in JVM sandbox to ensure bugs in application-level
   authentication do not arbitrary actions on web server 
@@ -173,4 +172,7 @@
   * appendPath('active:xyz', 'ferb/gerb') = 'active:follow-path+source@active:xyz+path@data:,ferb/gerb' 
   * appendPath('foo/bar', 'ferb/gerb') = 'foo/bar/ferb/gerb'
   * option to require '/' after last directory or not for path-based URIs
- 
+
+* 'ccouch checkout' with '-cache-sector' doesn't seem to work
+  (request metadata wasn't getting passed in correctly - threaded in through directory mergers
+  and addDirectoryEntry function, which seems a little bit ugly...) 
