--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.2
+Date: 2021-11-07
+  Changes:
+    - Avoid spamming stderr with stacktraces due to HTTP 403s
+---------------------------------------------------------------------------------------------------
 Version: 1.5.0
 Date: 2021-10-29
   Features:
